# My-noteBook-RAG

./: .env  .env.example  .gitignore  AMELIORATIONS_UTILISATEUR.md  BATCH_PROCESSING_GUIDE.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  GUIDE_REPERTOIRES.md  GUIDE_SOURCES_MULTIPLES.md  IMAGE_CLASSIFICATION_GUIDE.md  INTERFACE_V2_GUIDE.md  MISTRAL_SETUP_GUIDE.md  MISTRAL_TROUBLESHOOTING.md  PROJETS_CATEGORIES_GUIDE.md  QUICK_START.md  RAG_APP_GUIDE.md  README.md  SOLUTION_FINALE_ENTREPRISES.md  SOLUTION_FINALE_M595.md  STREAMLIT_TROUBLESHOOTING.md  SYNTHESE_FINALE_ENTREPRISES.md  add_pdf_simple.py  app.py  check_mondial_after.py  clean_vector_db.bat  debug_vector_search.ipynb  example_._rag_.data  example_test.data.json  fix_nltk.bat  fix_nltk.py  guide.ipynb  install_tesseract.bat  launch_batch_app.bat  launch_rag_app.bat  launch_rag_v2_app.bat  launch_vision_app.bat  partial_e2e_results.csv  partial_e2e_results.json  pyproject.toml  rag_app.py  (+7 more)
data/: anthropic_docs.json.backup  sample_summary_indexed_docs.json
data/anthropic_docs_v3/: summary_indexed_vector_db.pkl
data/docs/: vector_db.pkl
evaluation/csvs/: evaluation_results_detailed.csv  evaluation_results_detailed_level_three.csv  evaluation_results_detailed_level_two.csv
evaluation/json_results/: evaluation_results_level_three.json  evaluation_results_level_two.json  evaluation_results_one.json
rag_app/: main.py
rag_app/config/: settings.py
rag_app/core/: vector_database.py
rag_app/services/: batch_service.py
rag_app/ui/components/: __init__.py  debug_panel.py  sidebar.py
rag_app/ui/pages/: __init__.py  (+7 more)
rag_app/utils/: file_utils.py
requirements/: base.txt  dev.txt  vision.txt
scripts/: clean.py  setup.py
