[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_app"
version = "2.0.0"
description = "Système RAG professionnel pour la gestion documentaire"
authors = [
    {name = "Votre Nom", email = "votre.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "streamlit>=1.28.0",
    "PyPDF2>=3.0.0", 
    "nltk>=3.8.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
vision = [
    "pillow>=9.0.0",
    "pytesseract>=0.3.10", 
    "opencv-python>=4.8.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/votre-username/rag-app"
"Bug Reports" = "https://github.com/votre-username/rag-app/issues"
"Source" = "https://github.com/votre-username/rag-app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_app*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
